Actionss with elements on the pas(lessons_29)

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ button {
 .circle {
 	width: 80px;
 	height: 80px;
-	background-color: blue;
+	background-color: pink;
 	display: block;
 	margin-top: 10px;
 	border-radius: 100%;
