--- a/css/css.css
+++ b/css/css.css
@@ -1,9 +1,29 @@
-body {
-  height: 1000px;
+.btn-block {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  height: 100px;
+  background-color: grey;
 }
 
-.box {
+button {
   width: 150px;
-  height: 100px;
+  height: 50px;
+  background-color: yellow;
+}
+
+.blue {
+  background-color: skyblue;
+}
+
+.red {
   background-color: red;
+}
+
+.green {
+  background-color: green;
+}
+
+.violet {
+  background-color: violet;
 }
